Automatically backed up by Learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -6,6 +6,6 @@
 <body>
   <h1>Today</h1>
   <% today = DateTime.now %>
-  <p>The date is <%= today.day %>.</p>
+  <p>The date is <%= today.to_date %>.</p>
 </body>
 </html>
