Automatically backed up by Learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -6,6 +6,6 @@
 <body>
   <h1>Today</h1>
   <% today = DateTime.now %>
-  <p><%= today.strftime("The date is %A, %B %d, %Y.") %>.</p>
+  <p><%= today.strftime("The date is %A, %B %d, %Y.") %></p>
 </body>
 </html>
